<resources>
  <string name="app_name">Mood Miner</string>
  <string name="category_title_placeholder">category title</string>
  <string name="category_description_placeholder">category description</string>
  <string name="login_button">login</string>
  <string name="signup_button">sign up</string>
  <string name="email_hint">Email addres</string>
  <string name="password_hint">Password</string>
  <string name="password_confirm_hint">Repeat Password</string>
  <string name="sign_up_title">Sign Up!</string>
  <string name="log_in_title">Log in!</string>
  <string name="goto_login_button">I already have an account</string>
  <string name="goto_signup_button">I dont have an account</string>


  <string-array name="category_titles">
    <item>Baseball</item>
    <item>Badminton</item>
    <item>Basketball</item>
    <item>Bowling</item>
    <item>Cycling</item>
    <item>Golf</item>
    <item>Running</item>
    <item>Soccer</item>
    <item>Swimming</item>
    <item>Table Tennis</item>
    <item>Tennis</item>
  </string-array>

  <string-array name="category_descriptions">
    <item>Here is some Baseball news!</item>
    <item>Here is some Badminton news!</item>
    <item>Here is some Basketball news!</item>
    <item>Here is some Bowling news!</item>
    <item>Here is some Cycling news!</item>
    <item>Here is some Golf news!</item>
    <item>Here is some Running news!</item>
    <item>Here is some Soccer news!</item>
    <item>Here is some Swimming news!</item>
    <item>Here is some Table Tennis news!</item>
    <item>Here is some Tennis news!</item>
  </string-array>

  <array name="category_images">
    <item>@drawable/img_baseball</item>
    <item>@drawable/img_badminton</item>
    <item>@drawable/img_basketball</item>
    <item>@drawable/img_bowling</item>
    <item>@drawable/img_cycling</item>
    <item>@drawable/img_golf</item>
    <item>@drawable/img_running</item>
    <item>@drawable/img_soccer</item>
    <item>@drawable/img_swimming</item>
    <item>@drawable/img_tabletennis</item>
    <item>@drawable/img_tennis</item>
   </array>



</resources>
